Removed old form code from _form.html.erb

--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -1,10 +1,10 @@
-<h1>Listing games</h1>
+<h1>Listing Games</h1>
 
 <table>
   <tr>
     <th>Date</th>
-    <th>Team one</th>
-    <th>Team two</th>
+    <th>Team One</th>
+    <th>Team Two</th>
     <th></th>
     <th></th>
     <th></th>
