Added padding to games index, sorted games by date

--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -4,13 +4,13 @@
 </p>
 
 <p>
-  <b>Team one:</b>
-  <%= @game.team_one_id %>
+  <b>Team One:</b>
+  <%= @game.team_one.name %>
 </p>
 
 <p>
-  <b>Team two:</b>
-  <%= @game.team_two_id %>
+  <b>Team Two:</b>
+  <%= @game.team_two.name %>
 </p>
 
 
