--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -12,12 +12,12 @@
 
 <% @games.each do |game| %>
   <tr>
-    <td><%= game.date %></td>
+    <td><%= game.date.to_formatted_s(:long) %></td>
     <td><%= game.team_one.name %></td>
     <td><%= game.team_two.name %></td>
     <td><%= link_to 'Show', game %></td>
     <td><%= link_to 'Edit', edit_game_path(game) %></td>
-    <td><%= link_to 'Destroy', game, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+    <td><%= link_to 'Delete', game, method: :delete, data: { confirm: 'Are you sure?' } %></td>
   </tr>
 <% end %>
 </table>
