--- a/app/views/games/_form.html.erb
+++ b/app/views/games/_form.html.erb
@@ -1,6 +1,7 @@
 <%= simple_form_for(@game, html: {class: "form-horizontal"}) do |f| %>
-  <%= f.input :team_one_id, label: 'Team One', collection: Team.all, label_method: :name %>
-  <%= f.input :team_two_id, label: 'Team Two', collection: Team.all, label_method: :name %>
+  <%= f.input :team_one_id, label: 'Team One', :include_blank => false,collection: Team.all, label_method: :name %>
+  <%= f.input :team_two_id, label: 'Team Two', :include_blank => false,collection: Team.all, label_method: :name %>
+  <%= f.input :winning_team, label: 'Winner', collection: Team.all, label_method: :name %>
   <%= f.input :date %>
   <div class="form-actions">
     <%= f.button :submit, class: "btn btn-success" %>
