--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,6 +18,7 @@
 					<ul class="nav pull-right">
 						<% if user_signed_in? %>
 							<li><%= link_to current_user.first_name, edit_user_registration_path %></li>
+							<li><%= link_to current_user.points %></li>
 							<li><%= link_to "Log out", logout_path %></li>
 						<% else %>
 							<li><%= link_to "Register", register_path %></li>
