--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -3,8 +3,8 @@
 <table>
   <tr>
     <th>Date</th>
-    <th>Team One</th>
-    <th>Team Two</th>
+    <th>Home Team</th>
+    <th>Away Team</th>
     <th></th>
     <th></th>
     <th></th>
