--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,12 @@
 					<ul class="nav pull-right">
 						<% if user_signed_in? %>
 							<li><%= link_to current_user.first_name, edit_user_registration_path %></li>
-							<li><%= link_to current_user.points %></li>
+							<% if current_user.points != nil %>
+								<li><a href="#"><%= current_user.points %> Points</a></li>
+							<% else %>
+								<li><a href="#">0 Points</a></li>
+							<% end%>
+								
 							<li><%= link_to "Log out", logout_path %></li>
 						<% else %>
 							<li><%= link_to "Register", register_path %></li>
