--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -22,5 +22,5 @@
 </table>
 
 <br />
-<%= link_to 'New Game', new_game_path, class: "btn" %>
+<%= link_to 'New Game', new_game_path, class: "btn btn-success" %>
 
