--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -4,13 +4,18 @@
 </p>
 
 <p>
-  <b>Team One:</b>
+  <b>Home Team:</b>
   <%= @game.team_one.name %>
 </p>
 
 <p>
-  <b>Team Two:</b>
+  <b>Away Team:</b>
   <%= @game.team_two.name %>
+</p>
+
+<p>
+  <b>Winning Team:</b>
+  <%= @game.winning_team_id %>
 </p>
 
 
