--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,11 +7,15 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-	<div class="container-fluid">
-		<header class="hero-unit">
-		  <h1><a href="#">NFL Pool</a></h1>
-		  <p>This is a witty slogan</p>	
-		</header>
+	<header class="hero-unit">
+		<div class="container">
+	  		<h1><a href="/">NFL Pool</a></h1>
+	  		<p>This is a witty slogan</p>	
+		</div>
+	</header>
+	
+	<div class="container">
+
 		<div class="navbar navbar-fixed-top">
 			<div class="navbar-inner">
 				<div class="container">
@@ -33,7 +37,7 @@
 				</div>
 			</div>
 		</div>
-		<div class="row-fluid">
+		<div class="row">
 			<div class="span1">
 			</div>
 			<div class="span10">
