--- a/app/views/games/_form.html.erb
+++ b/app/views/games/_form.html.erb
@@ -1,4 +1,5 @@
 <%= simple_form_for(@game, html: {class: "form-horizontal"}) do |f| %>
+  <%= f.error_notification %>
   <%= f.input :team_one_id, label: 'Home Team', :include_blank => false,collection: Team.all, label_method: :name %>
   <%= f.input :team_two_id, label: 'Away Team', :include_blank => false,collection: Team.all, label_method: :name %>
   <%= f.input :winning_team_id, label: 'Winner', collection: Team.all, label_method: :name %>
