Added gravatar support in navbar. Tweaked pick views for clarity and conciseness

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -49,6 +49,7 @@ background: white;
 .navbar .nav > li > a { 
 	color: black;
 	text-shadow: none;
+	font-weight: bold;
 }
 .main-inner a:hover { 
 	color: #bdc3c7; 
