--- a/app/views/picks/show.html.erb
+++ b/app/views/picks/show.html.erb
@@ -2,18 +2,10 @@
 
 <p>
   <b>Pick team:</b>
-  <%= @pick.pick_team_id %>
+  <%= @pick.pick_team.name %>
 </p>
 
-<p>
-  <b>Date:</b>
-  <%= @pick.date %>
-</p>
 
-<p>
-  <b>User:</b>
-  <%= @pick.user_id %>
-</p>
 
 
 <%= link_to 'Edit', edit_pick_path(@pick) %> |
