--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,6 +20,7 @@
 							<% end%>
 								
 							<li><%= link_to "Log out", logout_path %></li>
+							<li><%= link_to(image_tag(current_user.gravatar_url), edit_user_registration_path) %></li>
 						<% else %>
 							<li><%= link_to "Register", register_path %></li>
 							<li><%= link_to "Log In", login_path %></li>
