--- a/app/views/picks/_form.html.erb
+++ b/app/views/picks/_form.html.erb
@@ -2,7 +2,7 @@
   <%= f.error_notification %>
 
   <div class="form-inputs">
-    <%= f.input :pick_team, label: 'Winning Team', :include_blank => false, collection: Team.all, label_method: :name %>    
+    <%= f.input :pick_team_id, label: 'Winning Team', :include_blank => false, collection: Team.all, label_method: :name %>    
   </div>
 
   <div class="form-actions">
