--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,7 @@
 							<% else %>
 								<li><a href="#">0 Points</a></li>
 							<% end%>
-								
+
 							<li><%= link_to "Log out", logout_path %></li>
 							<li><%= link_to(image_tag(current_user.gravatar_url), edit_user_registration_path) %></li>
 						<% else %>
@@ -30,16 +30,16 @@
 			</div>
 		</div>
 
-	<% if current_page? root_path %>	
+	<% if current_page? root_url %>
 	<% else %>
 	<header class="hero-unit main-hero">
 		<div class="container">
 	  		<h1><a href="/">NFL Pool</a></h1>
-	  		<p>The best way to run your football pool</p>	
+	  		<p>The best way to run your football pool</p>
 		</div>
 	</header>
 	<% end %>
-	
+
 	<div class="container">
 
 
@@ -54,8 +54,8 @@
 					</div>
 				<% end %>
 				<%= yield %>
-			</div> 
+			</div>
 		</div>
-	</div>	
+	</div>
 </body>
 </html>
