--- a/app/views/picks/_form.html.erb
+++ b/app/views/picks/_form.html.erb
@@ -1,8 +1,10 @@
-<%= simple_form_for(@pick, html: {class: "form-horizontal"}) do |f| %>
+<%= simple_form_for([@game, @pick], html: {class: "form-horizontal"}) do |f| %>
   <%= f.error_notification %>
 
   <div class="form-inputs">
-    <%= f.input :pick_team_id, label: 'Winning Team', :include_blank => false, collection: Team.all, label_method: :name %>    
+    <%= f.input :pick_team_id, label: 'Winning Team', :include_blank => false, collection: Team.all, label_method: :name %>
+    <%= f.input :user_id, label: 'User', collection: User.all, label_method: :first_name %>
+    <%= f.input :date %>
   </div>
 
   <div class="form-actions">
