--- a/app/views/picks/index.html.erb
+++ b/app/views/picks/index.html.erb
@@ -11,15 +11,14 @@
 
 <% @picks.each do |pick| %>
   <tr>
-    <td><%= pick.pick_team.name %></td>
+    <td><%= pick.pick_team_id %></td>
     <td><%= pick.created_at.to_formatted_s(:long)  %></td>
-    <td><%= link_to 'Show', pick %></td>
-    <td><%= link_to 'Edit', edit_pick_path(pick) %></td>
-    <td><%= link_to 'Destroy', pick, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+
+
   </tr>
 <% end %>
 </table>
 
 <br />
 
-<%= link_to 'New Pick', new_pick_path %>
+<%= link_to 'Back', games_path %>
