--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,7 +30,7 @@
 			</div>
 		</div>
 
-	<% if current_page = root_url %>
+	<% if current_page? root_url %>
 	<% else %>
 		<header class="hero-unit main-hero">
 			<div class="container">
