--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,14 +30,15 @@
 			</div>
 		</div>
 
-	<% if current_page? root_url %>
-	<% else %>
+	<% if current_page? new_user_session_path %>
 		<header class="hero-unit main-hero">
 			<div class="container">
 		  		<h1><a href="/">NFL Pool</a></h1>
 		  		<p>The best way to run your football pool</p>
 			</div>
 		</header>
+	<% else %>
+
 	<% end %>
 
 	<div class="container">
