--- a/app/views/picks/_form.html.erb
+++ b/app/views/picks/_form.html.erb
@@ -3,8 +3,8 @@
 
   <div class="form-inputs">
     <%= f.input :pick_team_id, label: 'Winning Team', :include_blank => false, collection: Team.all, label_method: :name %>
-    <%= f.input :user_id, label: 'User', collection: User.all, label_method: :first_name %>
-    <%= f.input :date %>
+    <%= f.input :user_id, :as => :hidden, :input_html => { :value => current_user } %>
+
   </div>
 
   <div class="form-actions">
@@ -13,3 +13,4 @@
 
   </div>
 <% end %>
+
