--- a/app/views/picks/_form.html.erb
+++ b/app/views/picks/_form.html.erb
@@ -4,8 +4,9 @@
   <div class="form-inputs">
     <%= f.input :pick_team_id, label: 'Winning Team', :include_blank => false, collection: Team.all, label_method: :name %>
     <%= f.input :user_id, :as => :hidden, :input_html => { :value => current_user } %>
-
+    <%= f.input :game_id, :as => :hidden, :input_html => { :value => @game } %>
   </div>
+
 
   <div class="form-actions">
 
@@ -13,4 +14,3 @@
 
   </div>
 <% end %>
-
