--- a/app/views/picks/_form.html.erb
+++ b/app/views/picks/_form.html.erb
@@ -3,6 +3,7 @@
 
   <div class="form-inputs">
     <%= f.input :pick_team_id, label: false, :include_blank => false, collection: [@game.team_one, @game.team_two], label_method: :name, as: :radio_buttons %>
+    <%= f.input :wager, label: 'Bet', collection: 25..300, :include_blank => false %>
 
 
   </div>
