Added dividers for Thursday, Sunday and Monday games on game index

--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -10,21 +10,84 @@
     <th></th>
   </tr>
 
-<% @games.each do |game| %>
-  <% if game.date.beginning_of_week == Date.current.beginning_of_week %>
-    <tr>
-      <td><%= game.date.to_formatted_s(:long) %></td>
-      <td><%= game.team_one.name %></td>
-      <td><%= game.team_two.name %></td>
-      <td><%= link_to 'Pick', new_game_pick_path(game) %></td>
-      <% if current_user.admin? %>
-        <td><%= link_to 'Edit', edit_game_path(game) %></td>
-        <td><%= link_to 'Delete', game, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      <% else %>
+  <% @games.each do |game| %>
+    <% if game.date.beginning_of_week == Date.current.beginning_of_week %>
+      <% if game.date.to_time.wday == 4 %>
+        <h4>Thursday's games</h4>
+        <tr>
+          <td><%= game.date.to_formatted_s(:long) %></td>
+          <td><%= game.team_one.name %></td>
+          <td><%= game.team_two.name %></td>
+          <td><%= link_to 'Pick', new_game_pick_path(game) %></td>
+          <% if current_user.admin? %>
+            <td><%= link_to 'Edit', edit_game_path(game) %></td>
+            <td><%= link_to 'Delete', game, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+          <% else %>
+          <% end %>
+        </tr>
       <% end %>
-    </tr>
     <% end %>
-<% end %>
+  <% end %>
+</table>
+
+<table>
+  <tr>
+    <th>Date</th>
+    <th>Home Team</th>
+    <th>Away Team</th>
+    <th></th>
+    <th></th>
+    <th></th>
+  </tr>
+
+  <% @games.each do |game| %>
+    <% if game.date.beginning_of_week == Date.current.beginning_of_week %>
+      <% if game.date.to_time.wday == 0 %>
+        <h4>Sunday's games</h4>
+        <tr>
+          <td><%= game.date.to_formatted_s(:long) %></td>
+          <td><%= game.team_one.name %></td>
+          <td><%= game.team_two.name %></td>
+          <td><%= link_to 'Pick', new_game_pick_path(game) %></td>
+          <% if current_user.admin? %>
+            <td><%= link_to 'Edit', edit_game_path(game) %></td>
+            <td><%= link_to 'Delete', game, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+          <% else %>
+          <% end %>
+        </tr>
+      <% end %>
+    <% end %>
+  <% end %>
+</table>
+
+<table>
+  <tr>
+    <th>Date</th>
+    <th>Home Team</th>
+    <th>Away Team</th>
+    <th></th>
+    <th></th>
+    <th></th>
+  </tr>
+
+  <% @games.each do |game| %>
+    <% if game.date.beginning_of_week == Date.current.beginning_of_week %>
+      <% if game.date.to_time.wday == 1 %>
+        <h4>Monday's games</h4>
+        <tr>
+          <td><%= game.date.to_formatted_s(:long) %></td>
+          <td><%= game.team_one.name %></td>
+          <td><%= game.team_two.name %></td>
+          <td><%= link_to 'Pick', new_game_pick_path(game) %></td>
+          <% if current_user.admin? %>
+            <td><%= link_to 'Edit', edit_game_path(game) %></td>
+            <td><%= link_to 'Delete', game, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+          <% else %>
+          <% end %>
+        </tr>
+      <% end %>
+    <% end %>
+  <% end %>
 </table>
 
 <br />
