Changed CSS styling on games index. Changed working on 'picks closed' text

--- a/app/views/picks/_form.html.erb
+++ b/app/views/picks/_form.html.erb
@@ -10,11 +10,11 @@
 
   <% if @game.date == Date.current %>
     <div class="form-actions">
-      <h4>Betting is now closed for this game</h4>
+      <h4>Picks are now closed for this game</h4>
     </div>
   <% elsif @game.date < Date.current %>
     <div class="form-actions">
-      <h4>Betting is now closed for this game</h4>
+      <h4>Picks are now closed for this game</h4>
     </div>
   <% else %>
     <div class="form-actions">
