--- a/app/assets/stylesheets/games.css.scss
+++ b/app/assets/stylesheets/games.css.scss
@@ -3,6 +3,7 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 td {
 	padding: 0 20px 0 20px;
+  text-align: center;
 }
 
 td:not(:last-child)
@@ -15,3 +16,16 @@ h4 {
   text-align: center;
   padding-top: 20px;
 }
+
+td:nth-child(-n+3) {
+  min-width: 150px ;
+}
+
+h1 {
+  text-align: center;
+}
+
+table {
+    margin-left:auto;
+    margin-right:auto;
+  }
