--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,3 +1,5 @@
+
+
 <h2>Edit <%= resource_name.to_s.humanize %></h2>
 
 <%= simple_form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { class: "form-horizontal", :method => :put }) do |f| %>
@@ -31,7 +33,7 @@
     <%= f.button :submit, "Update" %>
   </div>
 <% end %>
-
+<p><a href="https://en.gravatar.com/">Update avatar? Click here!</a></p>
 <h3>Cancel my account</h3>
 
 <p>Unhappy? <%= link_to "Cancel my account", registration_path(resource_name), :data => { :confirm => "Are you sure?" }, :method => :delete %></p>
