Updated CSS on tables

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -55,3 +55,19 @@ background: white;
 	color: #bdc3c7;
 }
 
+h2 {
+  text-align: center;
+}
+
+.centered-text {
+  text-align: center;
+}
+
+.logo {
+  padding-left: 50px;
+}
+
+
+.user-highlight {
+    background-color: lightblue;
+  }
