--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>NFL Pool</title>
+  <title>The Replacements</title>
   <%= stylesheet_link_tag    "application", :media => "all" %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
@@ -10,6 +10,7 @@
 		<div class="navbar">
 			<div class="navbar-inner main-inner">
 				<div class="container">
+					<a href="#" class="logo brand"><% link_to games_path %>The Replacements</a>
 					<ul class="nav pull-right">
 						<% if user_signed_in? %>
 							<li><%= link_to current_user.first_name, edit_user_registration_path %></li>
@@ -18,6 +19,7 @@
 							<% else %>
 								<li><a href="#">0 Points</a></li>
 							<% end%>
+							<li><%= link_to 'Leaderboard', user_leaderboard_path(current_user.id) %></li>
 
 							<li><%= link_to "Log out", logout_path %></li>
 							<li><%= link_to(image_tag(current_user.gravatar_url), edit_user_registration_path) %></li>
@@ -33,7 +35,7 @@
 	<% if current_page? new_user_session_path %>
 		<header class="hero-unit main-hero">
 			<div class="container">
-		  		<h1><a href="/">NFL Pool</a></h1>
+		  		<h1><a href="/">The Replacements</a></h1>
 		  		<p>The best way to run your football pool</p>
 			</div>
 		</header>
