Updated game index with 'Spread' column. Updated users controller to allow non-admins to access the leaderboard

--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -1,11 +1,11 @@
 <h1>Games for Week <%= Date.current.cweek - 28 %></h1>
 <hr>
-<table>
+<table class="game-index">
   <tr>
     <th>Date</th>
-    <th>Home Team</th>
     <th>Away Team</th>
-    <th></th>
+    <th>Home Team</th>
+    <th>Spread</th>
     <th></th>
     <th></th>
   </tr>
@@ -20,12 +20,12 @@
   <% end %>
 </table>
 
-<table>
+<table class="game-index">
   <tr>
     <th>Date</th>
-    <th>Home Team</th>
     <th>Away Team</th>
-    <th></th>
+    <th>Home Team</th>
+    <th>Spread</th>
     <th></th>
     <th></th>
   </tr>
@@ -40,12 +40,12 @@
   <% end %>
 </table>
 
-<table>
+<table class="game-index">
   <tr>
     <th>Date</th>
-    <th>Home Team</th>
     <th>Away Team</th>
-    <th></th>
+    <th>Home Team</th>
+    <th>Spread</th>
     <th></th>
     <th></th>
   </tr>
