--- a/app/views/games/_game_tr.html.erb
+++ b/app/views/games/_game_tr.html.erb
@@ -1,8 +1,12 @@
 <tr>
   <td><%= game.date.to_formatted_s(:long) %></td>
-  <td><%= game.team_one.name %></td>
   <td><%= game.team_two.name %></td>
-  <td><%= link_to 'Pick', new_game_pick_path(game) %></td>
+  <td><%= game.team_one.name %></td>
+  <td></td>
+  <td>
+
+      <%= link_to 'Pick', new_game_pick_path(game) %></td>
+
   <% if current_user.admin? %>
     <td><%= link_to 'Edit', edit_game_path(game) %></td>
     <td><%= link_to 'Delete', game, method: :delete, data: { confirm: 'Are you sure?' } %></td>
