--- a/app/views/games/_form.html.erb
+++ b/app/views/games/_form.html.erb
@@ -3,6 +3,7 @@
   <%= f.input :team_one_id, label: 'Home Team', :include_blank => false,collection: Team.all, label_method: :name %>
   <%= f.input :team_two_id, label: 'Away Team', :include_blank => false,collection: Team.all, label_method: :name %>
   <%= f.input :winning_team_id, label: 'Winner', collection: Team.all, label_method: :name %>
+  <%= f.input :spread %>
   <%= f.input :date %>
   <div class="form-actions">
     <%= f.button :submit, class: "btn btn-success" %>
