Tweaked weekly_wager method to only show wagers from the current week

--- a/app/views/users/leaderboard.html.erb
+++ b/app/views/users/leaderboard.html.erb
@@ -17,7 +17,7 @@
         <div class="user-highlight">
           <td><%= user.profile_name %></td>
           <td><%= user.user_points %></td>
-          <td></td>
+          <td><%= user.weekly_wagers %></td>
           <td></td>
           <td></td>
           <td></td>
@@ -27,7 +27,7 @@
     <tr>
       <td><%= user.profile_name %></td>
       <td><%= user.user_points %></td>
-      <td></td>
+      <td><%= user.weekly_wagers %></td>
       <td></td>
     </tr>
   <% end %>
