Added date input to new pick form. Added validation to ensure that a user must select a team before creating a pick

--- a/app/views/picks/_form.html.erb
+++ b/app/views/picks/_form.html.erb
@@ -8,6 +8,7 @@
     <% else %>
       <%= f.input :wager, label: 'Points', collection: 25..300, :include_blank => false %>
     <% end %>
+    <%= f.hidden_field :date, value: Date.current %>
 
   </div>
 
