--- a/app/assets/stylesheets/games.css.scss
+++ b/app/assets/stylesheets/games.css.scss
@@ -17,9 +17,16 @@ h4 {
   padding-top: 20px;
 }
 
-td:nth-child(-n+3) {
-  min-width: 150px ;
+.table-spacing td:nth-child(-2n+2) {
+  min-width: 175px ;
 }
+
+.table-spacing td:nth-child(-2n+1) {
+  min-width: 100px ;
+}
+
+
+
 
 h1 {
   text-align: center;
